# Waterdrop-Nonebot-Plugins

./: .env  .gitignore  README.md  pyproject.toml
qqbot/plugins/: .vimrc  test.py
qqbot/plugins/default/: execute.py  help.py  permission.py  server_status.py
qqbot/plugins/default/api/: strawberry.cfg  strawberryapi.py  utils.py
qqbot/plugins/game/gambling/: blackjack.py  buckshot_roulette.py  sicBo.py
qqbot/plugins/game/gambling/buckshot/: Item.py  Main.py  Player.py
qqbot/plugins/game/zhua/: stage.py
qqbot/plugins/game/zhua/utils/: init.py  util.py
qqbot/plugins/puzzle/: manager.py
qqbot/plugins/puzzle/puzzles/template/: cfg.json
qqbot/plugins/randoms/: jrrp.py  rnd.py  roll.py  tarot.py
qqbot/plugins/randoms/TRPG/: ra.py
qqbot/plugins/randoms/libs/: 春游.txt
qqbot/plugins/randoms/libs/choose/: SSC3.txt  冬游.txt  刁民.txt  大失败.txt  大成功.txt  画游.txt  草莓酱.txt
qqbot/plugins/randoms/trpg/: ra.py
qqbot/plugins/text/: ultra.py
