[project]
name = "QQBot"
version = "0.1.0"
description = "QQBot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = [
    "qqbot/plugins/default",
    "qqbot/plugins/default/api",
    "qqbot/plugins/puzzle",
    "qqbot/plugins/randoms",
    "qqbot/plugins/randoms/trpg",
    "qqbot/plugins/text"
]
builtin_plugins = []
